// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Ticket 9 Snapshot Tests LoginForm matches snapshot 1`] = `
<div>
  <div
    class="min-h-screen flex items-center justify-center bg-disney-light-blue"
  >
    <div
      class="bg-white dark:bg-neutral-800 p-8 rounded-lg border border-gray-200 w-full max-w-sm"
    >
      <h1
        class="text-2xl font-bold mb-1"
      >
        <span
          class="text-gray-900 dark:text-gray-100"
        >
          Pin
        </span>
        <span
          class="text-disney-dark-blue dark:text-disney-light-blue"
        >
          Barter
        </span>
      </h1>
      <p
        class="text-sm text-gray-500 dark:text-gray-300 mb-6"
      >
        Sign in to your account
      </p>
      <div
        class="mb-4"
      >
        <label
          class="block text-sm dark:text-gray-300 text-gray-600 mb-1"
          for="Username"
        >
          Username
        </label>
        <input
          class="w-full border rounded-md px-3 py-2 text-sm focus:outline-none focus:ring-2 
              border-gray-300 focus:ring-blue-500 text-gray-500 dark:text-gray-300"
          data-testid="username"
          id="Username"
          placeholder="username"
          type="text"
          value=""
        />
      </div>
      <div
        class="mb-4"
      >
        <label
          class="block dark:text-gray-300 text-sm text-gray-600 mb-1"
          for="Password"
        >
          Password
        </label>
        <input
          class="w-full border rounded-md px-3 py-2 text-sm focus:outline-none focus:ring-2 
              border-gray-300 focus:ring-blue-500 text-gray-500 dark:text-gray-300"
          data-testid="password"
          id="Password"
          placeholder="password"
          type="password"
          value=""
        />
      </div>
      <button
        class=" w-full  cursor-pointer  py-2  rounded-md  text-sm  font-medium bg-disney-light-blue text-disney-dark-blue hover:bg-disney-dark-blue hover:text-white dark:hover:bg-white dark:hover:text-disney-dark-blue"
        data-testid="sign-in-button"
        type="button"
      >
        Sign in
      </button>
      <p
        class="text-sm text-center dark:text-gray-300 text-gray-500 mt-4"
      >
        Don't have an account?
         
        <a
          class="text-blue-600 dark:text-blue-400 hover:underline"
          href="/register"
        >
          Create one
        </a>
      </p>
    </div>
  </div>
</div>
`;

exports[`Ticket 9 Snapshot Tests PinCard matches snapshot 1`] = `
<div>
  <div
    class=" bg-white  dark:bg-neutral-800  border  border-gray-500 dark:border-gray-200  rounded-lg p-3  cursor-pointer  hover:shadow-md  transition-shadow hover:ring"
    data-testid="pin-card"
  >
    <img
      alt="Kermit the Frog"
      class="w-full aspect-square object-cover rounded-md mb-2"
      src="https://placehold.co/200x200?text=Kermit%20the%20Frog"
    />
    <p
      class=" text-sm  font-semibold  text-gray-900  dark:text-gray-100  truncate"
    >
      Kermit the Frog
    </p>
    <p
      class=" text-xs  text-gray-500  dark:text-gray-300  truncate"
    >
      Muppets Christmas Carol
    </p>
    <p
      class=" text-xs  text-disney-dark-blue  dark:text-disney-light-blue  font-medium mt-1"
    >
      3
       
      credits
    </p>
  </div>
</div>
`;

exports[`Ticket 9 Snapshot Tests PinsPage matches snapshot with pins rendered 1`] = `
<div>
  <div
    class="p-6"
  >
    <h1
      class=" text-2xl font-bold text-gray-900 dark:text-gray-100 mb-2"
    >
      All Pins
    </h1>
    <p
      class=" text-sm text-gray-500 dark:text-gray-300 mb-6"
    >
      Browse and discover our catalogue of pins!
    </p>
    <input
      class=" w-full border  border-gray-300  rounded-md px-4  py-2 text-sm mb-6  focus:outline-none focus:ring-2 focus:ring-disney-dark-blue bg-white text-gray-900 dark:bg-neutral-800 dark:text-gray-100 dark:focus:ring-disney-light-blue "
      data-testid="pin-search"
      placeholder="Search for a pin..."
      type="text"
      value=""
    />
    <div
      class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4"
    >
      <div
        class=" bg-white  dark:bg-neutral-800  border  border-gray-500 dark:border-gray-200  rounded-lg p-3  cursor-pointer  hover:shadow-md  transition-shadow hover:ring"
        data-testid="pin-card"
      >
        <img
          alt="Kermit the Frog"
          class="w-full aspect-square object-cover rounded-md mb-2"
          src="https://placehold.co/200x200?text=Kermit%20the%20Frog"
        />
        <p
          class=" text-sm  font-semibold  text-gray-900  dark:text-gray-100  truncate"
        >
          Kermit the Frog
        </p>
        <p
          class=" text-xs  text-gray-500  dark:text-gray-300  truncate"
        >
          Muppets Christmas Carol
        </p>
        <p
          class=" text-xs  text-disney-dark-blue  dark:text-disney-light-blue  font-medium mt-1"
        >
          3
           
          credits
        </p>
      </div>
    </div>
    <div
      class=" mt-12 border border-gray-500 dark:border-gray-200 rounded-lg p-6 bg-white dark:bg-neutral-800 flex flex-col md:flex-row items-center justify-between gap-4"
    >
      <div>
        <p
          class=" text-sm font-semibold text-gray-900 dark:text-gray-100 mb-1"
        >
          Have a pin that is not in our catalogue?
        </p>
        <p
          class=" text-sm text-gray-500 dark:text-gray-300"
        >
          Help us grow the PinBarter collection by suggesting a new pin for review.
        </p>
      </div>
      <button
        class=" px-4 py-2 text-sm font-medium bg-disney-light-blue text-disney-dark-blue rounded hover:bg-disney-dark-blue hover:text-white dark:hover:bg-white dark:hover:text-disney-dark-blue whitespace-nowrap"
        data-testid="suggest-pin-button"
        type="button"
      >
        Suggest a Pin
      </button>
    </div>
  </div>
</div>
`;

exports[`Ticket 9 Snapshot Tests RegisterForm matches snapshot 1`] = `
<div>
  <div
    class="min-h-screen flex items-center justify-center bg-disney-light-blue"
  >
    <div
      class="bg-white dark:bg-neutral-800 p-8 rounded-lg border border-gray-200 w-full max-w-sm"
    >
      <h1
        class="text-2xl font-bold mb-1"
      >
        <span
          class="text-gray-900 dark:text-gray-100"
        >
          Pin
        </span>
        <span
          class="text-disney-dark-blue dark:text-disney-light-blue"
        >
          Barter
        </span>
      </h1>
      <p
        class="text-sm text-gray-500 dark:text-gray-300 mb-6"
      >
        Create your account
      </p>
      <div
        class="mb-4"
      >
        <label
          class="block text-sm text-gray-600 dark:text-gray-300 mb-1"
          for="Username"
        >
          Username
        </label>
        <input
          class="w-full border dark:text-gray-300 rounded-md px-3 py-2 text-sm focus:outline-none focus:ring-2 
                border-gray-300 focus:ring-blue-500 text-gray-500"
          id="Username"
          placeholder="username"
          type="text"
          value=""
        />
      </div>
      <div
        class="mb-4"
      >
        <label
          class="block text-sm dark:text-gray-300 text-gray-600 mb-1"
          for="Email"
        >
          Email
        </label>
        <input
          class="w-full border dark:text-gray-300 rounded-md px-3 py-2 text-sm focus:outline-none focus:ring-2 
                border-gray-300 focus:ring-blue-500 text-gray-500"
          id="Email"
          placeholder="email"
          type="email"
          value=""
        />
      </div>
      <div
        class="mb-4"
      >
        <label
          class="block text-sm dark:text-gray-300 text-gray-600 mb-1"
          for="Password"
        >
          Password
        </label>
        <input
          class="w-full border dark:text-gray-300 rounded-md px-3 py-2 text-sm focus:outline-none focus:ring-2 
                border-gray-300 focus:ring-blue-500 text-gray-500"
          id="Password"
          placeholder="password"
          type="password"
          value=""
        />
      </div>
      <button
        class=" w-full  cursor-pointer  py-2  rounded-md  text-sm  font-medium bg-disney-light-blue text-disney-dark-blue hover:bg-disney-dark-blue hover:text-white dark:hover:bg-white dark:hover:text-disney-dark-blue"
        type="button"
      >
        Create Account
      </button>
      <p
        class="text-sm text-center text-gray-500 dark:text-gray-300 mt-4"
      >
        Already have an account?
         
        <a
          class="text-blue-600 dark:text-blue-400 hover:underline"
          href="/login"
        >
          Sign in
        </a>
      </p>
    </div>
  </div>
</div>
`;

exports[`Ticket 9 Snapshot Tests SideBar matches snapshot with dark mode classes 1`] = `
<div>
  <div
    class=" md:hidden  fixed  top-0  left-0  right-0  z-50  bg-disney-light-blue px-4  py-3  flex  items-center  justify-between"
  >
    <a
      data-testid="logo-link"
      href="/home"
    >
      <h1
        class="text-xl font-bold"
      >
        <span
          class="text-gray-900"
        >
          Pin
        </span>
        <span
          class="text-disney-dark-blue"
        >
          Barter
        </span>
      </h1>
    </a>
    <button
      class="text-disney-dark-blue p-2"
      data-testid="burger-menu-button"
    >
      <svg
        class="size-6"
        fill="none"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </button>
  </div>
  <div
    class="
                fixed
                top-14
                bottom-0
                md:relative
                md:top-0
                z-50
                w-64
                transition-transform
                duration-300
                bg-disney-light-blue
                flex
                flex-col
                overflow-y-auto
                -translate-x-full
                md:translate-x-0
            "
    data-testid="sidebar-div"
  >
    <div
      class="hidden md:flex p-6 flex items-center justify-between"
    >
      <a
        href="/home"
      >
        <h1
          class="text-2xl font-bold"
        >
          <span
            class="text-gray-900"
          >
            Pin
          </span>
          <span
            class="text-disney-dark-blue"
          >
            Barter
          </span>
        </h1>
      </a>
    </div>
    <div
      class="flex-1 flex flex-col pt-2 md:pt-0"
    >
      <a
        class="block px-6 py-3 text-gray-700 hover:bg-white dark:hover:bg-neutral-800 dark:hover:text-disney-light-blue hover:text-disney-dark-blue"
        data-testid="home"
        href="/home"
      >
        Home
      </a>
      <a
        class="block px-6 py-3 text-gray-700 hover:bg-white dark:hover:bg-neutral-800 dark:hover:text-disney-light-blue hover:text-disney-dark-blue"
        data-testid="collection"
        href="/collection"
      >
        My Pins
      </a>
      <a
        class="block px-6 py-3 text-disney-dark-blue bg-white font-semibold dark:text-disney-light-blue dark:bg-neutral-800"
        data-testid="pins"
        href="/pins"
      >
        All Pins
      </a>
      <a
        class="block px-6 py-3 text-gray-700 hover:bg-white dark:hover:bg-neutral-800 dark:hover:text-disney-light-blue hover:text-disney-dark-blue"
        data-testid="trading-post"
        href="/trading-post"
      >
        Trading Post
      </a>
      <a
        class="block px-6 py-3 text-gray-700 hover:bg-white dark:hover:bg-neutral-800 dark:hover:text-disney-light-blue hover:text-disney-dark-blue"
        data-testid="profile"
        href="/profile"
      >
        My Profile
      </a>
      <a
        class="block px-6 py-3 text-gray-700 hover:bg-white dark:hover:bg-neutral-800 dark:hover:text-disney-light-blue hover:text-disney-dark-blue"
        data-testid="trades"
        href="/trades"
      >
        My Trades 
      </a>
      <a
        class="block px-6 py-3 text-gray-700 hover:bg-white dark:hover:bg-neutral-800 dark:hover:text-disney-light-blue hover:text-disney-dark-blue"
        data-testid="wishlist"
        href="/wishlist"
      >
        My Wishlist
      </a>
    </div>
    <div
      class="items-center border-gray-200 flex flex-col pb-6"
    >
      <div
        class="flex flex-col items-center gap-3 mb-4"
      >
        <span
          class="text-sm text-gray-700"
        >
          testuser
        </span>
        <a
          class=" w-8  h-8  rounded-full  bg-disney-dark-blue  text-white  flex  items-center  justify-center  text-sm  font-bold hover:ring-2"
          data-testid="help-link"
          href="/help"
        >
          ?
        </a>
      </div>
      <div>
        <button
          class="text-sm text-gray-600 hover:underline hover:text-red-500"
        >
          Sign Out
        </button>
      </div>
    </div>
  </div>
</div>
`;
